# pl_compare

./: .envrc  .gitignore  LICENSE  Makefile  README.md  compare.py  demo.webm  flake.nix  layout.kdl  pl_compare_demo.ipynb  pyproject.toml  readme.md  repro.py  run.py
.forgejo/workflows/: demo.yaml  push.yaml  python-publish.yml
.gihthub/workflows/: github-actions-demo.yaml
.github/workflows/: github-actions-demo.yaml  on_push.yaml  on_push_main.yaml  python-publish.yml  repro.yaml  reproduce_polars_error.yaml
pl_compare/: __init__.py  compare.py  examples.py  report.py
pl_compare/example_data/: netflix_titles-corrupted.csv
pl_compare/example_data/citibike/: 2016-01-updated.parq
pl_compare/tests/: test_compare.py
pl_compare/tests/test_data/scenario_1/: base.csv  compare.csv
tests/: test_compare.py
