[tool.poetry]
name = "pl_compare"
version = "0.1.22"
description = "A tool to find the differences between two tables."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [ {include = "pl_compare"} ]

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.19.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.1"
pytest = "^7.4.0"

[tool.black]
line-length = 100

[tool.ruff]
ignore = ["E501"]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
