[tool.black]
line-length = 100

[tool.ruff]
lint.ignore = ["E501"]
line-length = 100

[project]
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">3.9"
dependencies = [
    "polars>=1.24.0",
]
name = "pl_compare"
version = "0.9.2"
description = "A tool to find the differences between two tables."
readme = "README.md"

[project.urls]
Repository = "https://github.com/concur1/pl_compare"
Changelog = "https://github.com/concur1/pl_compare/releases"

[dependency-groups]
dev = [
    "black<25.0.0,>=24.2.0",
    "ruff<1.0,>=0.3",
    "mypy<2.0.0,>=1.9.0",
    "pytest<9.0.0,>=8.1.1",
    "pandas<3.0.0,>=2.0.3",
    "pdbpp>=0.10.3",
]
